# diploma-project

./: .gitignore  .pre-commit-config.yaml  README.md  project.md  pyproject.toml  requirements.txt
ugv_swarm_expert/: README.md  package.xml  setup.cfg  setup.py
ugv_swarm_expert/checkpoints/offline/: actor_epfinal.pth  critic_epfinal.pth  discriminator_epfinal.pth
ugv_swarm_expert/launch/: cones_world.launch.py  empty_world.launch.py  leader_navigation.launch.py  swarm_inference.launch.py  swarm_simulation.launch.py
ugv_swarm_expert/scripts/: offline_train.py  prepare_expert_data.py
ugv_swarm_expert/ugv_swarm_expert/: UGVSwarmEnv.py  actor_network.py  constants.py  dataset_preprocessor.py  decision_logic.py  discriminator_network.py  expert_data_collector.py  feature_engineer.py  gail_reward.py  inference_node.py  main.py  online_state_processor.py  safety_supervisor.py  state_processor.py  swarm_manager.py  trainer.py
ugv_swarm_expert/ugv_swarm_expert/evaluation/: eval_metrics.py
ugv_swarm_expert/ugv_swarm_expert/inference/: inference_node.py
ugv_swarm_expert/ugv_swarm_expert/models/: actor_network.py  critic_network.py  discriminator_network.py  weight_initializer.py
ugv_swarm_expert/ugv_swarm_expert/navigation/: leader_navigator.py
ugv_swarm_expert/ugv_swarm_expert/training/: gail_reward.py  rollout_buffer.py  train.py  trainer.py
ugv_swarm_expert/worlds/: cones_world.sdf  empty_world.sdf
